# SPL30

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  approval-fixed.html  approval-fixed.mmd  check_assign_attrs.py  check_attrs.py  check_commit_attrs.py  check_eval_attrs.py  check_log_attrs.py  dump_ast.py  pyproject.toml  review.mmd  review.spl  run_transpiler.py
cookbook/: README-go.md  README-test.md  README-ts.md  README.md  cookbook_catalog-go.json  cookbook_catalog-ts.json  cookbook_catalog.json  run_all.py
cookbook-pocketflow/66_a2a/: a2a_ollama-spec.md
cookbook/05_self_refine/: README-why-SPL.md  README.md  benchmark-1-review.md  benchmark-1.sh  benchmark-langgraph-review.md  model-findings.md  (+5 more)
docs/: FEATURES.md  NDD-closure-test.md  ROADMAP.md  SPL-by-spec.md  VISION.md  chat-gemini-2026-04-05.md  copy-md-files.sh  future-work.md  gap-analysis-gemini-2026-04-06.md  graphics-tikz.md  liquid-ai.md  new-recipes.md  new-reciples-from-pocketflow.html  new-reciples-from-pocketflow.md  research.md  spl-ui-approach-1.md  splc-approach-1.md  splc-for-go-implemented.md  text2mermaid.md  text2mermaid2spl.md
specs/: grammar-additions.ebnf  spl-v3.0-spec.md
spl/: __init__.py  _loader.py  cli.py  composer.py  event.py  executor.py  hub_registry.py  parser.py  registry.py  types.py
spl3/: __init__.py  _loader.py  ast_nodes.py  cli.py  code_rag.py  composer.py  event.py  executor.py  hub_registry.py  parser.py  peer.py  registry.py  status.py
splc/: README.md  cli.py
tests/: test_code_rag.py  test_event.py  test_registry.py  test_status_mapping.py  test_types.py
(+450 files in other folders)
